--- a/Android/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Android/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,36 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
-
-    <item android:title="Communicate">
+    <item android:title="Controls">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
+                android:id="@+id/liveData"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Live Data" />
+            <item
+            android:id="@+id/editPath"
+            android:icon="@drawable/ic_menu_send"
+            android:title="Edit Path" />
+            <item
+                android:id="@+id/action_settings"
+                android:icon="@drawable/ic_menu_send"
+                android:title="Settings" />
         </menu>
     </item>
-
 </menu>
