--- a/Android/app/src/main/res/layout/activity_simulate.xml
+++ b/Android/app/src/main/res/layout/activity_simulate.xml
@@ -10,4 +10,55 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="alpha.smartdripirrigation.simulate">
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/forward"
+        android:id="@+id/forward"
+        android:background="@android:color/holo_blue_dark"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/fetch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_dark"
+        android:textColor="@android:color/white"
+        android:id="@+id/button5"
+        android:layout_above="@+id/backward"
+        android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/right"
+        android:src="@drawable/right"
+        android:background="@android:color/holo_blue_dark"
+        android:layout_marginEnd="45dp"
+        android:layout_alignBottom="@+id/button5"
+        android:layout_alignParentEnd="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:id="@+id/left"
+        android:src="@drawable/left"
+        android:background="@android:color/holo_blue_dark"
+        android:layout_below="@+id/forward"
+        android:layout_toStartOf="@+id/button5"
+        android:layout_marginEnd="45dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/backward"
+        android:src="@drawable/backward"
+        android:background="@android:color/holo_blue_dark"
+        android:layout_marginTop="60dp"
+        android:layout_below="@+id/left"
+        android:layout_alignStart="@+id/forward" />
+
 </RelativeLayout>
