--- a/Android/app/src/main/res/layout/activity_simulate.xml
+++ b/Android/app/src/main/res/layout/activity_simulate.xml
@@ -11,25 +11,17 @@
     tools:context="alpha.smartdripirrigation.simulate">
 
     <Button
-        android:text="@string/fetch"
+        android:text="@string/endSimulate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/endSimulate"
         android:background="@android:color/black"
         android:textColor="@android:color/white"
-        android:id="@+id/fetch"
-        android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/right"
-        android:layout_alignBottom="@+id/left" />
-
-    <ImageButton
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:id="@+id/left"
-        android:src="@drawable/left"
-        android:background="@android:color/black"
-        android:layout_marginEnd="24dp"
-        android:layout_alignTop="@+id/right"
-        android:layout_toStartOf="@+id/fetch" />
+        android:layout_below="@+id/backward"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="70dp"
+        android:layout_alignEnd="@+id/right" />
 
     <ImageButton
         android:layout_width="75dp"
@@ -37,8 +29,38 @@
         android:id="@+id/backward"
         android:src="@drawable/backward"
         android:background="@android:color/black"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/right"
+        android:layout_marginTop="54dp"
+        android:layout_below="@+id/fetch"
+        android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:id="@+id/right"
+        android:src="@drawable/right"
+        android:background="@android:color/black"
+        android:layout_above="@+id/backward"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="18dp" />
+
+    <ImageButton
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:id="@+id/left"
+        android:src="@drawable/left"
+        android:background="@android:color/black"
+        android:layout_alignTop="@+id/fetch"
+        android:layout_alignStart="@+id/endSimulate" />
+
+    <Button
+        android:text="@string/fetch"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:background="@android:color/black"
+        android:textColor="@android:color/white"
+        android:id="@+id/fetch"
+        android:layout_marginTop="54dp"
+        android:layout_below="@+id/forward"
         android:layout_centerHorizontal="true" />
 
     <ImageButton
@@ -47,30 +69,8 @@
         android:src="@drawable/forward"
         android:id="@+id/forward"
         android:background="@android:color/black"
-        android:layout_marginBottom="24dp"
-        android:layout_above="@+id/fetch"
+        android:layout_marginTop="18dp"
+        android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/backward" />
-
-    <ImageButton
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:id="@+id/right"
-        android:src="@drawable/right"
-        android:background="@android:color/black"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/fetch"
-        android:layout_marginStart="24dp" />
-
-    <Button
-        android:text="@string/endSimulate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/backward"
-        android:layout_marginTop="24dp"
-        android:id="@+id/endSimulate"
-        android:background="@android:color/black"
-        android:textColor="@android:color/white"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
