--- a/Android/app/src/main/res/layout/activity_simulate.xml
+++ b/Android/app/src/main/res/layout/activity_simulate.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/endSimulate"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:layout_below="@+id/backward"
         android:layout_alignParentStart="true"
@@ -28,7 +28,7 @@
         android:layout_height="75dp"
         android:id="@+id/backward"
         android:src="@drawable/backward"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
         android:layout_marginTop="54dp"
         android:layout_below="@+id/fetch"
         android:layout_centerHorizontal="true" />
@@ -38,7 +38,7 @@
         android:layout_height="75dp"
         android:id="@+id/right"
         android:src="@drawable/right"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
         android:layout_above="@+id/backward"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="18dp" />
@@ -48,7 +48,7 @@
         android:layout_height="75dp"
         android:id="@+id/left"
         android:src="@drawable/left"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
         android:layout_alignTop="@+id/fetch"
         android:layout_alignStart="@+id/endSimulate" />
 
@@ -56,7 +56,7 @@
         android:text="@string/fetch"
         android:layout_width="wrap_content"
         android:layout_height="75dp"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:id="@+id/fetch"
         android:layout_marginTop="54dp"
@@ -68,7 +68,7 @@
         android:layout_height="75dp"
         android:src="@drawable/forward"
         android:id="@+id/forward"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
         android:layout_marginTop="18dp"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/backward" />
