--- a/Android/app/src/main/res/layout/content_main.xml
+++ b/Android/app/src/main/res/layout/content_main.xml
@@ -13,5 +13,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
     tools:context="alpha.smartdripirrigation.MainActivity">
-
+    <ListView
+        android:id="@+id/mobile_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 </RelativeLayout>
