--- a/Android/app/src/main/res/layout/rover_list.xml
+++ b/Android/app/src/main/res/layout/rover_list.xml
@@ -2,10 +2,11 @@
 <!--  Single List Item Design -->
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/label"
+    android:id="@+id/roverName"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="20dip"
     android:textSize="20dip"
     android:textStyle="bold" >
 </TextView>
+
