--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#044f0e</color>
-    <color name="colorPrimaryDark">#271814</color>
-    <color name="colorAccent">#271814</color>
-    <color name="black">#053e0c</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#053e0c</color>
+    <color name="simulateObjectBackground">#053e0c</color>
+    <color name="simulateObjectForeground">#ffffff</color>
 </resources>
