--- a/Android/app/src/main/res/layout/activity_simulate.xml
+++ b/Android/app/src/main/res/layout/activity_simulate.xml
@@ -24,8 +24,8 @@
         android:text="@string/fetch"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:background="@color/black"
-        android:textColor="@android:color/white"
+        android:background="@color/simulateObjectBackground"
+        android:textColor="@color/simulateObjectForeground"
         android:id="@+id/fetch"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/forward"
@@ -36,7 +36,7 @@
         android:layout_height="60dp"
         android:id="@+id/left"
         android:src="@drawable/left"
-        android:background="@color/black"
+        android:background="@color/simulateObjectBackground"
         android:layout_alignTop="@+id/fetch"
         android:layout_toStartOf="@+id/fetch"
         android:layout_marginEnd="26dp" />
@@ -46,7 +46,7 @@
         android:layout_height="60dp"
         android:id="@+id/right"
         android:src="@drawable/right"
-        android:background="@color/black"
+        android:background="@color/simulateObjectBackground"
         android:layout_alignTop="@+id/fetch"
         android:layout_toEndOf="@+id/fetch"
         android:layout_marginStart="26dp" />
@@ -56,8 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/endSimulate"
-        android:background="@color/black"
-        android:textColor="@android:color/white"
+        android:background="@color/simulateObjectBackground"
+        android:textColor="@color/simulateObjectForeground"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="50dp"
@@ -68,7 +68,7 @@
         android:layout_height="60dp"
         android:src="@drawable/forward"
         android:id="@+id/forward"
-        android:background="@color/black"
+        android:background="@color/simulateObjectBackground"
         android:layout_marginTop="82dp"
         android:layout_below="@+id/textView2"
         android:layout_alignStart="@+id/backward" />
@@ -78,7 +78,7 @@
         android:layout_height="60dp"
         android:id="@+id/backward"
         android:src="@drawable/backward"
-        android:background="@color/black"
+        android:background="@color/simulateObjectBackground"
         android:layout_marginTop="32dp"
         android:layout_below="@+id/fetch"
         android:layout_centerHorizontal="true" />
