--- a/Android/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Android/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,21 +3,21 @@
     <item android:title="Controls">
         <menu>
             <item
-                android:id="@+id/liveData"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/liveData" />
+                android:id="@+id/liveFeed"
+                android:icon="@drawable/live_feed"
+                android:title="@string/liveFeed" />
             <item
             android:id="@+id/simulate"
             android:icon="@drawable/simulate"
             android:title="@string/simulate" />
             <item
-                android:id="@+id/roverSettings"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/roverSettings" />
+                android:id="@+id/addRover"
+                android:icon="@drawable/add_rover"
+                android:title="@string/addRover" />
         </menu>
     </item>
     <item
         android:id="@+id/logOut"
-        android:icon="@drawable/ic_menu_send"
+        android:icon="@drawable/logout"
         android:title="@string/logOut" />
 </menu>
