--- a/Android/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Android/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,18 +10,27 @@
             android:id="@+id/simulate"
             android:icon="@drawable/simulate"
             android:title="@string/simulate" />
+
+        </menu>
+    </item>
+    <item android:title="@string/rovers">
+        <menu>
+            <item
+                android:id="@+id/viewRover"
+                android:icon="@drawable/view_rover"
+                android:title="@string/viewRover" />
             <item
                 android:id="@+id/addRover"
                 android:icon="@drawable/add_rover"
                 android:title="@string/addRover" />
             <item
-                android:id="@+id/logOut"
-                android:icon="@drawable/logout"
-                android:title="@string/logOut" />
+                android:id="@+id/deleteRover"
+                android:icon="@drawable/delete_rover"
+                android:title="@string/deleteRover" />
         </menu>
     </item>
     <item
-        android:id="@+id/about"
+        android:id="@+id/logOut"
         android:icon="@drawable/logout"
-        android:title="@string/about" />
+        android:title="@string/logOut" />
 </menu>
