--- a/Android/app/src/main/res/layout/activity_view_rover.xml
+++ b/Android/app/src/main/res/layout/activity_view_rover.xml
@@ -9,5 +9,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="alpha.smartdripirrigation.viewRover">
-
+    <ListView
+        android:id="@+id/roverList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 </RelativeLayout>
