--- a/Android/app/src/main/res/layout/activity_delete_rover.xml
+++ b/Android/app/src/main/res/layout/activity_delete_rover.xml
@@ -34,7 +34,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="@string/addRover"
+        android:text="@string/deleteRover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/btnBackground"
