--- a/Android/app/src/main/res/layout/activity_delete_rover.xml
+++ b/Android/app/src/main/res/layout/activity_delete_rover.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:ems="10"
-        android:id="@+id/ip"
+        android:id="@+id/deleteIP"
         android:hint="@string/ipAddress"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
