--- a/Android/app/src/main/res/layout/rover_list.xml
+++ b/Android/app/src/main/res/layout/rover_list.xml
@@ -5,10 +5,10 @@
     android:id="@+id/roverName"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="20dip"
-    android:background="#b3bfae"
     android:textColor="@color/colorPrimary"
-    android:textSize="20dip"
+    android:background="@color/btnTextColor"
+    android:padding="20dp"
+    android:textSize="20dp"
     android:textStyle="bold" >
 </TextView>
 
