--- a/Android/app/src/main/res/layout/activity_rover_details.xml
+++ b/Android/app/src/main/res/layout/activity_rover_details.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6"
+        android:id="@+id/details"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="75dp" />
