--- a/Android/app/src/main/res/layout/activity_rover_details.xml
+++ b/Android/app/src/main/res/layout/activity_rover_details.xml
@@ -40,8 +40,8 @@
         android:background="@color/btnBackground"
         android:textColor="@color/btnTextColor"
         android:id="@+id/button"
-        android:layout_marginTop="66dp"
-        android:layout_below="@+id/textView4"
+        android:layout_below="@+id/ipDetails"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="58dp"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
