--- a/Android/app/src/main/res/layout/activity_status.xml
+++ b/Android/app/src/main/res/layout/activity_status.xml
@@ -19,4 +19,14 @@
         android:layout_marginTop="13dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imgview"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="44dp"
+        android:id="@+id/textView2" />
 </RelativeLayout>
