--- a/Android/app/src/main/res/layout/activity_automatic.xml
+++ b/Android/app/src/main/res/layout/activity_automatic.xml
@@ -12,6 +12,8 @@
 
     <TimePicker
         android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_height="wrap_content"
         android:id="@+id/timePicker"
         android:layout_marginTop="18dp"
