--- a/Android/app/src/main/res/layout/activity_automatic.xml
+++ b/Android/app/src/main/res/layout/activity_automatic.xml
@@ -15,6 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/btnBackground"
+        android:textColor="@color/btnTextColor"
         android:layout_marginBottom="17dp"
         android:id="@+id/set_automatic"
         android:layout_alignParentStart="true"
